# LibreSplit

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  client.cpp  client.hpp  downloader.hpp  last-gtk.gschema.xml  last.css  last.desktop  last.gschema.xml  main.cpp  meson.build  readmem.hpp
.github/workflows/: build.yml  c-cpp.yml  codeql.yml  format-check.sh  format.yml  publish-wiki.yml
assets/: com.github.wins1ey.libresplit.gschema.xml  last.desktop  libresplit.desktop
docs/: AutoSplitters.md  auto-splitters.md  settings-keybinds.md  split-files.md  themes.md  troubleshooting.md
include/: client.h  downloader.h  downloader.hpp  lasprint.h  readmem.h
src/: auto-splitter.c  auto-splitter.h  autosplitter.cpp  autosplitter.h  bind.c  bind.h  client.cpp  client.h  downloader.cpp  lasprint.cpp  lasprint.h  last-gtk.c  last.c  last.h  lastprint.cpp  libresplit.gschema.xml  main.c  main.cpp  main.css  memory.c  memory.h  process.c  process.h  readmem.cpp  readmem.h  settings.c  settings.h  signature.c  signature.h  timer.c  timer.h  urn-gtk.c  urn.c
src/component/: best-sum.c  clock.c  components.c  components.h  detailed-timer.c  pb.c  prev-segment.c  splits.c  title.c  wr.c
src/components/: best-sum.c  last-component.c  last-component.h  pb.c  prev-segment.c  splits.c  timer.c  title.c  urn-component.h  wr.c
src/headers/: autosplitter.h  autosplitter.hpp  client.hpp  downloader.hpp  keybinder.h  lasprint.hpp  last-gtk.h  last.h  lastprint.hpp  memory.h  process.h  readmem.hpp  settings.h  urn.h
